#41 Prevent the diagrams from being squashed when too big for available space in container

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -50,6 +50,10 @@ span.copy:active {
     cursor: crosshair;
 }
 
+section {
+    overflow: scroll;
+}
+
 section.diagram {
     flex: 100%;
 }
